# DP4ds

./: CMakeLists.txt  README.md
ASorter/: ASorter.hpp  Heapifier.hpp  InsertSorter.hpp  MergeSorter.hpp  QuickSorter.hpp
ArrayClassic/: ArrayClassicMain.cpp
ArrayP/: ArrayP.hpp  ArrayPMain.cpp
ArrayT/: ArrayTMain.cpp
BiTreeCS/: BiTreeCS.hpp  BiTreeCSMain.cpp
BiTreeCS/UnitTests/: unit-traversals.txt
BiTreeCSV/: BiTCSVclearVis.hpp  BiTCSVcontainsVis.hpp  BiTCSVequalsVis.hpp  BiTCSVheightVis.hpp  BiTCSVinOrderVis.hpp  BiTCSVnumLeavesVis.hpp  BiTCSVpostOrderVis.hpp  BiTCSVremLeavesVis.hpp  BiTreeCSV.hpp  BiTreeCSVMain.cpp
BiTreeCSV/UnitTests/: unit-equals-false.txt
BiTreeL/: BiTreeL.hpp  BiTreeLMain.cpp
BiTreeL/UnitTests/: unit-contains.txt  unit-equals-true.txt  unit-metrics.txt
DictionaryA/: DictionaryA.hpp  DictionaryAMain.cpp
DictionaryBST/: DictTcontainsVis.hpp  DictTinsertVis.hpp  DictTremoveVis.hpp  DictTtoStreamVis.hpp  DictionaryBST.hpp  DictionaryBSTMain.cpp
DictionaryHash/: DictHcontainsVis.hpp  DictHinsertVis.hpp  DictHremoveVis.hpp  DictionaryHash.hpp  DictionaryHashMain.cpp
DictionaryHash/UnitTests/: unit-bernstein-512-256.txt  unit-bernstein-7-10.txt  unit-knuth-512-256.txt  unit-knuth-7-10.txt
DictionaryL/: DictLcontainsVis.hpp  DictLinsertVis.hpp  DictLremoveVis.hpp  DictionaryL.hpp  DictionaryLMain.cpp
FigureA8/: FigureA8Main.cpp
Graph/: Graph.cpp  Graph.hpp  GraphMain.cpp
HashData/: HashData-duplicates.txt  HashData.hpp  HashFunctions.hpp  HashMain.cpp
HashData/UnitTests/: unit-bernstein-512-256.txt  unit-bernstein-7-10.txt  unit-duplicates.txt  unit-knuth-512-256.txt  unit-knuth-7-10.txt
LLRBTree/: LLRBTree.hpp
ListC/: ListCMain.cpp
ListCS/: ListCS.hpp  ListCSMain.cpp
ListCS/UnitTests/: unit-remLast.txt
ListCSV/: LCSVappendVis.hpp  LCSVcontainsVis.hpp  LCSVequalsVis.hpp  LCSVlengthVis.hpp  LCSVremLastVis.hpp  LCSVremoveVis.hpp  LCSVreverseVis.hpp  ListCSV.hpp  ListCSVMain.cpp
ListCSV/UnitTests/: unit-remLast.txt
ListCV/: ListCVMain.cpp
ListL/: ListL.hpp  ListLMain.cpp
NTree/: NTree.hpp  NTreeInOrderVis.hpp  NTreeMain.cpp
NTree/UnitTests/: unit-build.txt  unit-inOrder.txt
NWBTree/: NWBTreeContainsVis.hpp  NWBTreeHeightVis.hpp  NWBTreeInsertVis.hpp  NWBTreeIsEmptyVis.hpp  NWBTreeMain.cpp  NWBTreeMaxVis.hpp  NWBTreeMinVis.hpp  NWBTreeNumNodesVis.hpp  NWBTreeNumValuesVis.hpp  NWBTreeRemVis.hpp  NWBTreeToStreamVis.hpp  SplitUpAndApplyVis.hpp
NWBTree/UnitTests/: unit-contains.txt
PriorityQ/: PriorityQ.hpp  PriorityQMain.cpp
QueueA/: QueueA.hpp  QueueAMain.cpp
QueueL/: QueueL.hpp
Rational/: Rational.cpp  RationalMain.cpp
Shape/: Circle.cpp  Line.cpp  MysteryShape.cpp  MysteryShape.hpp  NullShape.cpp  Rectangle.cpp  RightTriangle.cpp  ShapeMain.cpp
ShapeFactory/: Circle.cpp  Line.cpp  Rectangle.cpp  Rectangle.hpp  RightTriangle.cpp  ShapeFactory.hpp  ShapeFactoryMain.cpp  ShapeFactoryMain.hpp
SortClassic/: SortClassicMain.cpp
SortClassic/UnitTests/: unit-25.txt  unit-50.txt
SortCompAsgn/: SortCA-d0500.txt  SortCA-d1500.txt  SortCA-d2000.txt  SortCA-d3000.txt  SortCA-d3500.txt  SortCA-d4500.txt  SortCA-d5000.txt  SortCA-d5500.txt  SortCA-d6000.txt  SortCompAsgnMain.cpp
SortInt/: SortIntMain.cpp
SortProbe/: ArrProbe.hpp  SortProbe-d1000.txt  SortProbe-d2500.txt  SortProbe-d4000.txt  SortProbeMain.cpp
StackA/: StackA.hpp  StackAMain.cpp
StackL/: StackL.hpp
VectorP/: VectorP.hpp  VectorPMain.cpp
VectorT/: VectorT.hpp  VectorTMain.cpp
